# proyecto_progra

./: .gitignore  Crud_documentación(2).docx
Códigos/proyecto progra/business_manager/: pyproject.toml
business_manager/: config.py  main.py
business_manager/core/: auth.py  data_manager.py  security.py
business_manager/models/: employee.py
business_manager/routers/: auth_router.py  employee_router.py
empresa_erp/: LICENSE  README.md  main.py  requirements.txt
empresa_erp/brand/: Brand_Book.md  Marketing_Kit.md
empresa_erp/data/: companies.json
empresa_erp/data/company_6c8a076a/: users.json
empresa_erp/data/company_e5ce448b/: alerts.json  costs.json  employees.json  inventory_movements.json  payroll.json  products.json  sales.json  users.json
empresa_erp/data/exports/: factura_F20260423-183F4D_20260423_150020.txt  factura_F20260423-351E2D_20260423_150247.txt  factura_F20260423-3E6C94_20260423_155108.txt
empresa_erp/docs/: Documentacion_Tecnica.md  Documentacion_Tecnica.txt  Manual_de_Usuario.md  Trabajo_Escrito_EnterpriseERP.txt
empresa_erp/src/: __init__.py  database.py  gui.py
empresa_erp/src/modules/: __init__.py  auth.py  automation.py  finance.py  hr.py  inventory.py  reports.py
