[project]
name = "business-manager"
version = "2.1.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pyjwt>=2.9.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.3.0",
]

[project.scripts]
bm = "cli:app"
serve = "main:start"
